<resources>
    <string name="app_name">WhatTheFilm</string>
    <string name="research">rechercher</string>
    <string name="defaultYear">2017</string>
    <string name="labelMovieName">Le nom du film</string>
    <string name="labelYear">L\'année (optionnelle)</string>
    <string name="labelLanguage">La langue</string>
    <string name="rating">score:</string>
    <string name="categories">catégories:</string>
    <string-array name="lang">
        <item>Français - fr</item>
        <item>English - en</item>
        <item>Toutes les langues - all</item>
    </string-array>
</resources>
