<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ptit_biscuit.whatthefilm.activity.MainActivity">

    <TextView
        android:text="@string/labelMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText"
        android:labelFor="@+id/editText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language"
        android:layout_marginTop="11dp"
        android:entries="@array/lang"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/years"
        android:layout_alignEnd="@+id/years" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/years"
        android:text="@string/defaultYear"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/editText"
        android:inputType="date" />

    <TextView
        android:text="@string/labelLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/years"
        android:layout_alignStart="@+id/language"
        android:labelFor="@+id/language" />

    <TextView
        android:text="@string/labelYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/years"
        android:labelFor="@+id/years" />

    <Button
        android:text="@string/research"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/language"
        android:layout_alignEnd="@+id/years"
        android:onClick="research" />

</RelativeLayout>
